now all image assets are pointing to cdn url

--- a/about.html
+++ b/about.html
@@ -18,13 +18,13 @@ title: about adam
 	</div>
 	<div class="span2 contact-box">
   	<a href="#" class="thumbnail">
-  	  <img title="Adam Neary headshot" src="images/headshot.jpg" width="150" height="150" alt="Adam Neary">
+  	  <img title="Adam Neary headshot" src="{{'images/headshot.jpg' | cdn}}" width="150" height="150" alt="Adam Neary">
     </a>
     <div id="social icons" 
-      <a href="http://feeds.feedburner.com/adamrneary/GeOR"><img src="images/rss_24_new.png" alt="RSS" class="icon"></a>
-      <a href="http://github.com/adamrneary"><img src="images/github_24_new.png" alt="Github" class="icon"></a>
-  		<a href="http://www.linkedin.com/in/adamrneary"><img src="images/linkedin_24_new.png" alt="LinkedIn" class="icon"></a>
-  		<a href="http://adamrneary.tumblr.com"><img src="images/tumblr_24_new.png"  alt="Tumblr" class="icon"></a>
+      <a href="http://feeds.feedburner.com/adamrneary/GeOR"><img src="{{'images/rss_24_new.png' | cdn}}" alt="RSS" class="icon"></a>
+      <a href="http://github.com/adamrneary"><img src="{{'images/github_24_new.png' | cdn}}" alt="Github" class="icon"></a>
+  		<a href="http://www.linkedin.com/in/adamrneary"><img src="{{'images/linkedin_24_new.png' | cdn}}" alt="LinkedIn" class="icon"></a>
+  		<a href="http://adamrneary.tumblr.com"><img src="{{'images/tumblr_24_new.png' | cdn}}"  alt="Tumblr" class="icon"></a>
 		</div>
 	</div>
 </div>
@@ -34,7 +34,7 @@ title: about adam
   <small>(and there's nothing I would rather be doing)</small>
 </h2>
 
-<a href="http://profitably.com/"><img class="company-logo" title="Profitably logo" src="images/Profitably_blugrn.jpg" alt="Profitably logo"></a>
+<a href="http://profitably.com/"><img class="company-logo" title="Profitably logo" src="{{'images/Profitably_blugrn.jpg' | cdn}}" alt="Profitably logo"></a>
 <p class='clear'>
 I am the Founder/CEO of a really exciting technology start-up called <a href="http://www.profitably.com/">Profitably</a>.
 </p>
@@ -52,7 +52,7 @@ We help you plan for the customers you want, measure how you’re performing, an
 
 <div class="row">
   <div class="span4">
-	<a href="http://www.atkearney.com/" class="thumbnail"><img class="company-logo" title="A.T. Kearney logo" src="/images/AT-Kearney-logo1.jpg" alt="A.T. Kearney logo"></a>
+	<a href="http://www.atkearney.com/" class="thumbnail"><img class="company-logo" title="A.T. Kearney logo" src="{{'images/AT-Kearney-logo1.jpg' | cdn}}" alt="A.T. Kearney logo"></a>
 	<p class='clear'><br/>
 	I got my start as a traditional management consultant at <strong><a href="http://atkearney.com/">A.T. Kearney</a></strong>. The experience at ATK was fantastic. I met my wife there, met my best friend, and learned everything there is to know about getting things done. I also became a major league data wonk at A.T. Kearney, and that’s become a defining trait.
 	</p>
@@ -61,7 +61,7 @@ We help you plan for the customers you want, measure how you’re performing, an
 	</p>
   </div>
   <div class="span4">
-	<a href="http://www.concentra.co.uk/" class="thumbnail"><img class="company-logo" title="Concentra logo" src="images/concentra1.png" alt="Concentra logo"></a>
+	<a href="http://www.concentra.co.uk/" class="thumbnail"><img class="company-logo" title="Concentra logo" src="{{'images/concentra1.png' | cdn}}" alt="Concentra logo"></a>
 	<p class='clear'><br/>
 	I then joined up with a software start-up in London called <strong><a href="http://concentra.co.uk/">Concentra</a></strong>. I was brought in to launch a Business Intelligence team as part of a broader transformation from custom software shop to analytical consultancy, and there was no shortage of pints waiting right outside in sunny Borough Market.
 	</p>
@@ -70,7 +70,7 @@ We help you plan for the customers you want, measure how you’re performing, an
 	</p>
   </div>
   <div class="span4">
-	<a href="http://www.alixpartners.com/" class="thumbnail"><img class="company-logo" title="AlixPartners logo" src="images/alixpartners1.jpg" alt="AlixPartners logo"></a>
+	<a href="http://www.alixpartners.com/" class="thumbnail"><img class="company-logo" title="AlixPartners logo" src="{{'images/alixpartners1.jpg' | cdn}}" alt="AlixPartners logo"></a>
 	<p class='clear'><br/>
 	When Deepa and I got engaged, it was time to call off the trans-Atlantic grind, so I took a role as Vice President in the New York office of <strong><a href="http://alixpartners.com/">AlixPartners</a></strong>, the global leader in turnaround/restructuring.
 	</p>
@@ -87,17 +87,17 @@ We help you plan for the customers you want, measure how you’re performing, an
 
 <div class="row">
   <div class="span4">
-    <a href="http://feeds.feedburner.com/adamrneary/GeOR"><img src="images/rss_24_new.png" alt="RSS" class="icon"></a>
+    <a href="http://feeds.feedburner.com/adamrneary/GeOR"><img src="{{'images/rss_24_new.png' | cdn}}" alt="RSS" class="icon"></a>
     <h3>adamrneary.com</h3>
 		I use this site for longer form blogging and things I think people may actually care to read.
   </div>
   <div class="span4">
-    <a href="http://github.com/adamrneary"><img src="images/github_24_new.png" alt="Github" class="icon"></a>
+    <a href="http://github.com/adamrneary"><img src="{{'images/github_24_new.png' | cdn}}" alt="Github" class="icon"></a>
 		<h3>Github</h3>
 		I am getting a late start with open source contributions, but what I have is (where else?!) at <a href="https://github.com/adamrneary" target="_blank">Github</a>.
   </div>
   <div class="span4">
-		<a href="http://www.linkedin.com/in/adamrneary"><img src="images/linkedin_24_new.png" alt="LinkedIn" class="icon"></a>
+		<a href="http://www.linkedin.com/in/adamrneary"><img src="{{'images/linkedin_24_new.png' | cdn}}" alt="LinkedIn" class="icon"></a>
 		<h3>LinkedIn</h3>
 		I use <a href="http://linkedin/in/adamrneary" target="_blank">LinkedIn</a> as my resume. Everything you need to know about my professional background is there.
   </div>
@@ -105,17 +105,17 @@ We help you plan for the customers you want, measure how you’re performing, an
 
 <div class="row">
   <div class="span4">
-		<a href="http://adamrneary.tumblr.com"><img src="images/tumblr_24_new.png"  alt="Tumblr" class="icon"></a>
+		<a href="http://adamrneary.tumblr.com"><img src="{{'images/tumblr_24_new.png' | cdn}}"  alt="Tumblr" class="icon"></a>
 		<h3>Tumblr</h3>
 		I use (and love!) <a href="http://adamrneary.tumblr.com/" target="_blank">Tumblr</a> for short-form blogging and more casual stuff (mostly food and political ravings).
   </div>
   <div class="span4">
-		<a href="https://facebook.com/adamrneary"><img src="images/facebook_24_new.jpg" alt="Facebook" class="icon"></a>
+		<a href="https://facebook.com/adamrneary"><img src="{{'images/facebook_24_new.jpg' | cdn}}" alt="Facebook" class="icon"></a>
 		<h3>Facebook</h3>
 		No big surprise here--I use <a href="http://facebook.com/adamrneary" target="_blank">Facebook</a> to keep in touch with folks and to untag myself from embarrassing wedding reception photos!
   </div>
   <div class="span4">
-		<a href="https://twitter.com/adamrneary"><img src="images/twitter_24_new.png" alt="Twitter" class="icon"></a>
+		<a href="https://twitter.com/adamrneary"><img src="{{'images/twitter_24_new.png' | cdn}}" alt="Twitter" class="icon"></a>
 		<h3>Twitter</h3>
 		I use <a href="http://twitter.com/adamrneary" target="_blank">Twitter</a> somewhat reluctantly, sparsely, and predominantly for inane drivel and inside jokes.
   </div>
